# nBodyGravity

./: 1  CMakeLists.txt  README.md  a.out  main.cpp  main.hpp  particle.hpp  plot.gnu  plots.cpp  positionVector.cpp  positionVector.hpp  test.cpp  tree.hpp  treeCodeNode.cpp  window.hpp
data/: data0.txt  data1.txt  particleAccelerationsDirectSummationSoftening=0.000001Timestep=0.00001.txt  particleAccelerationsDirectSummationSoftening=0.125769Timestep=0.00001.txt  particleAccelerationsDirectSummationSoftening=0.1Timestep=0.00001.txt  particleAccelerationsDirectSummationSoftening=2.01184Timestep=0.00001.txt  particleAccelerationsTreeCodeSoftening=0.000000001Timestep=0.00001Theta=0.25.txt  particleAccelerationsTreeCodeSoftening=0.000001Timestep=0.00001Theta=0.4.txt  tRelaxDirectSummationSoftening=0.000001Timestep=0.0000000001.txt  tRelaxDirectSummationSoftening=0.000001Timestep=0.0000001.txt  tRelaxDirectSummationSoftening=0.0001Timestep=0.0000000001.txt  tRelaxDirectSummationSoftening=0.001Timestep=0.0000000001.txt  tRelaxTreecodeSoftening=0.000001Timestep=0.0000000001Theta=0.25.txt
nBodyGravity/: constants.hpp  particle.cpp  quadropole.hpp  renderer.cpp  renderer.hpp  tree.cpp  treeCodeNode.hpp  window.cpp
nBodyGravity/data/: data0_noise.txt  data1_noise.txt  particleAccelerationsDirectSummationSoftening=0.00001Timestep=0.00001.txt  particleAccelerationsDirectSummationSoftening=0.0001Timestep=0.00001.txt  particleAccelerationsDirectSummationSoftening=0.001Timestep=0.00001.txt  particleAccelerationsDirectSummationSoftening=0.01Timestep=0.00001.txt  (+8 more)
